# LIS

./: .gitattributes  .gitignore  BACKEND_COMPLETION_SUMMARY.md  BACKEND_GAPS_ANALYSIS.md  BACKEND_SETUP_COMPLETE.md  COMPREHENSIVE_PROJECT_STATUS.md  CONTRIBUTING.md  CURRENT_SESSION_PROGRESS.md  DOCUMENTATION_COMPLETE.md  FINAL_PRODUCTION_READY_SUMMARY.md  GITHUB_UPLOAD_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPLEMENTATION_GUIDE.md  PRODUCTION_READINESS_STATUS.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SECURITY_GUIDE.md  PROJECT_STATUS.md  README.md  docker-compose.yml
backend/: .clippy.toml  .env.example  ABSOLUTE_FINAL_GUARANTEE.md  API_READINESS_REPORT.md  API_TESTING_GUIDE.md  BACKEND_IMPLEMENTATION_PROGRESS.md  CODE_ANALYSIS_REPORT.md  COMPILATION_STATUS.md  COMPILATION_SUCCESS.md  COMPLETE_BACKEND_GUIDE.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CURRENT_STATUS.md  Cargo.toml  Dockerfile.production  Dockerfile.service  FINAL_100_PERCENT_VERIFICATION.md  FINAL_API_CERTIFICATION.md  FRONTEND_INTEGRATION_API_TESTING_REPORT.md  Makefile  NEXT_STEPS.md  PRODUCTION_CERTIFICATION_REPORT.md  PROGRESS_REPORT.md  README.md  REAL_API_TEST_FINAL_REPORT.md  REAL_API_TEST_FINAL_REPORT_100.md  REAL_API_TEST_REPORT.md  SETUP_AND_TESTING_GUIDE.md  TEST_REPORT.md  ULTIMATE_100_PERCENT_VERIFICATION.md  VERIFICATION_REPORT.md  deny.toml  docker-compose.yml  init-databases.sql  performance-test.js  quick_start_services.sh  run-all-tests.sh  rustfmt.toml  start_all_services.sh  start_services_with_env.sh  (+3 more)
backend/infrastructure/prometheus/: prometheus.yml
backend/libs/common/: Cargo.toml
backend/libs/common/src/: auth.rs  error.rs  lib.rs  pagination.rs  types.rs  utils.rs
backend/libs/common/tests/: domain_model_tests.rs
backend/libs/infrastructure/: Cargo.toml
backend/libs/infrastructure/src/: cache.rs  database.rs  event_bus.rs  external.rs  lib.rs
backend/scripts/: benchmark_performance.sh  deploy.sh  load_test.js  production-readiness-check.sh  quick_start.sh  test-all-services.sh  test_services.sh  validate_schemas.sh
backend/services/analytics-service/: Cargo.toml
backend/services/analytics-service/migrations/: 20250105000001_create_analytics_tables.sql
backend/services/analytics-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/api-gateway/: Cargo.toml
backend/services/api-gateway/src/: main.rs  patient_client.rs  schema.rs
backend/services/billing-service/: Cargo.toml
backend/services/billing-service/migrations/: 20250105000001_create_billing_tables.sql
backend/services/billing-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/compliance-service/: Cargo.toml
backend/services/compliance-service/migrations/: 20250105000001_create_compliance_tables.sql
backend/services/compliance-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/equipment-service/: Cargo.toml
backend/services/equipment-service/migrations/: 20250105000001_create_equipment_tables.sql
backend/services/equipment-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/file-service/: Cargo.toml
backend/services/file-service/src/: config.rs  main.rs
backend/services/inventory-service/: Cargo.toml
backend/services/inventory-service/migrations/: 20250105000001_create_inventory_tables.sql
backend/services/inventory-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/notification-service/: Cargo.toml
backend/services/notification-service/migrations/: 20250105000001_create_notification_tables.sql
backend/services/notification-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/order-service/: Cargo.toml
backend/services/order-service/migrations/: 20250105000001_create_order_tables.sql
backend/services/order-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/organization-service/: .env.example  Cargo.toml  README.md
backend/services/organization-service/migrations/: 20250105000001_create_organization_tables.sql
backend/services/organization-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/patient-service/: Cargo.toml  Dockerfile
backend/services/patient-service/migrations/: 20250105000001_create_patient_tables.sql
backend/services/patient-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/patient-service/tests/: integration_tests.rs
backend/services/qc-service/: Cargo.toml
backend/services/qc-service/migrations/: 20250105000001_create_qc_tables.sql
backend/services/qc-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/report-service/: Cargo.toml
backend/services/report-service/migrations/: 20250105000001_create_report_tables.sql
backend/services/report-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/result-service/: Cargo.toml
backend/services/result-service/migrations/: 20250105000001_create_result_tables.sql
backend/services/result-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/result-service/tests/: auto_verification_tests.rs
backend/services/sample-service/: Cargo.toml
backend/services/sample-service/migrations/: 20250105000001_create_sample_tables.sql
backend/services/sample-service/src/: api.rs  config.rs  domain.rs  main.rs  repository.rs  service.rs
backend/services/sync-service/: Cargo.toml  Dockerfile
backend/services/sync-service/migrations/: 20251115000001_init.sql
backend/services/sync-service/src/: api.rs  (+5 more)
backend/services/user-service/: Cargo.toml
backend/tests/api/: 00_validate_readiness.sh  01_health_check_test.sh  02_auth_test.sh  03_patient_test.sh  04_order_workflow_test.sh  run_all_tests.sh  test_config.sh
(+134 files in other folders)
