[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.9"
actix-cors = "0.7"

# GraphQL
async-graphql = { version = "7.0", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7.0"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client for service federation
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"

# Common library
common = { path = "../../libs/common" }

[dev-dependencies]
