[package]
name = "file-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.6"

# GraphQL
async-graphql = "7.0"
async-graphql-actix-web = "7.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# MinIO / S3 client
aws-sdk-s3 = "1.9"
aws-config = "1.0"
aws-credential-types = "1.0"

# File type detection
mime_guess = "2.0"
infer = "0.15"

# Image processing (optional)
image = { version = "0.24", optional = true }

# PDF processing (optional)
pdf = { version = "0.8", optional = true }

# Common library
common = { path = "../../libs/common" }

[features]
default = []
image-processing = ["image"]
pdf-processing = ["pdf"]
