[package]
name = "notification-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "notification-service"
path = "src/main.rs"

[dependencies]
common = { path = "../../libs/common" }
tokio.workspace = true
actix-web.workspace = true
async-graphql.workspace = true
actix-cors.workspace = true
async-graphql-actix-web.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
