[package]
name = "patient-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "patient-service"
path = "src/main.rs"

[dependencies]
# Workspace crates
common = { path = "../../libs/common" }

# Async Runtime
tokio.workspace = true

# Web Framework
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true

# GraphQL
async-graphql.workspace = true
async-graphql-actix-web.workspace = true

# Database
sqlx.workspace = true
redis.workspace = true

# Kafka
rdkafka.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Validation
validator.workspace = true

# HTTP Client (for UIDAI, ABDM integration)
reqwest.workspace = true

[dev-dependencies]
mockall.workspace = true
