[package]
name = "report-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "report-service"
path = "src/main.rs"

[dependencies]
common = { path = "../../libs/common" }
tokio.workspace = true
actix-web.workspace = true
async-graphql.workspace = true
actix-cors.workspace = true
async-graphql-actix-web.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
printpdf = "0.7"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
