[package]
name = "sample-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sample-service"
path = "src/main.rs"

[dependencies]
common = { path = "../../libs/common" }
infrastructure = { path = "../../libs/infrastructure" }

tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
async-graphql.workspace = true
async-graphql-actix-web.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
